Fix Lint issues