@@ -80,14 +80,14 @@ public class BusRouteResult {
         busRoute.setStartBusStopStreetName(route.optString("StartBusStopStreetName"));
         busRoute.setStartBusStopStreetNumber(route.optInt("StartBusStopStreetNumber"));
         String doubleString = route.optString("StartBusStopDistanceToOrigin");
-        busRoute.setStartBusStopDistanceToOrigin(new Double(doubleString.replaceAll(",", ".")));
+        busRoute.setStartBusStopDistanceToOrigin(Double.valueOf(doubleString.replaceAll(",", ".")));
         busRoute.setDestinationBusStopNumber(route.optInt("DestinationBusStopNumber"));
         busRoute.setDestinationBusStopLat(route.optString("DestinationBusStopLat"));
         busRoute.setDestinationBusStopLng(route.optString("DestinatioBusStopLng")); //Destination is misspelled
         busRoute.setDestinationBusStopStreetName(route.optString("DestinatioBusStopStreetName")); //Destination is misspelled
         busRoute.setDestinationBusStopStreetNumber(route.optInt("DestinatioBusStopStreetNumber")); //Destination is misspelled
         doubleString = route.optString("DestinatioBusStopDistanceToDestination"); //Destination is misspelled
-        busRoute.setDestinationBusStopDistanceToDestination(new Double(doubleString.replaceAll(",", ".")));
+        busRoute.setDestinationBusStopDistanceToDestination(Double.valueOf(doubleString.replaceAll(",", ".")));
         busRouteResult.getBusRoutes().add(busRoute);
         return busRouteResult;
     }
@@ -120,7 +120,7 @@ public class BusRouteResult {
         firstBusRoute.setDestinationBusStopLng(route.optString("FirstLineDestinatioBusStopLng")); //Destination is misspelled
         //Distance to start BusStop
         String doubleString = route.optString("FirstLineStartBusStopDistance");
-        firstBusRoute.setStartBusStopDistanceToOrigin(new Double(doubleString.replaceAll(",", ".")));
+        firstBusRoute.setStartBusStopDistanceToOrigin(Double.valueOf(doubleString.replaceAll(",", ".")));
 
         //Adding the first line route
         busRouteResult.getBusRoutes().add(firstBusRoute);
@@ -145,13 +145,13 @@ public class BusRouteResult {
         secondBusRoute.setDestinationBusStopLng(route.optString("SecondLineDestinationBusStopLng"));
         //Distance to Destination from DestinationBusStop
         doubleString = route.optString("SecondLineDestinationBusStopDistance");
-        secondBusRoute.setDestinationBusStopDistanceToDestination(new Double(doubleString.replaceAll(",", ".")));
+        secondBusRoute.setDestinationBusStopDistanceToDestination(Double.valueOf(doubleString.replaceAll(",", ".")));
         //Adding the second line route
         busRouteResult.getBusRoutes().add(secondBusRoute);
 
         //Set the combination distance
         doubleString = route.optString("CombinationDistance");
-        busRouteResult.setCombinationDistance(new Double(doubleString.replaceAll(",", ".")));
+        busRouteResult.setCombinationDistance(Double.valueOf(doubleString.replaceAll(",", ".")));
         return busRouteResult;
     }
 
